--- a/views/renders.pug
+++ b/views/renders.pug
@@ -44,7 +44,11 @@ html(lang='en')
           
       .info-container
         p(class='centered') a collection of renders made in Cinema 4D and edited in Photoshop and After Effects respectively
-        
+      +work-link('loading . . . please wait', 'https://giant.gfycat.com/ShockingCavernousFalcon', true)
+      +work-link('sleep', 'https://giant.gfycat.com/BareIdealArrowworm', true)
+      +work-link('covering identity', '/images/cinema4d/still/covering-identity.jpg', false, flase, '/images/cinema4d/still/covering-identity.jpg')
+      +work-link('in his hands', '/images/cinema4d/still/in-his-hands.jpg', false, flase, '/images/cinema4d/still/in-his-hands.jpg')
+      +work-link('on my way', '/images/cinema4d/still/on-my-way.jpg', false, flase, '/images/cinema4d/still/on-my-way.jpg')  
       +work-link('bead bust', '/images/cinema4d/still/bead-bust-00-min.jpg', false, flase, '/images/cinema4d/still/bead-bust-00.jpg')
       +work-link('can not rest', '/images/cinema4d/still/laying-pose-1080-2-min.jpg', false, false, '/images/cinema4d/still/laying-pose-1080-2.jpg')
       +work-link("god's light", '/images/cinema4d/still/gods-light-min.jpg', false, false, '/images/cinema4d/still/gods-light.jpg')
